--- a/relatorio/desafio-05/pacote-d013/estilos/style.css
+++ b/relatorio/desafio-05/pacote-d013/estilos/style.css
@@ -36,3 +36,11 @@ section.tell{
     background-image: url("../imagens/frame-iphone.png");
     background-repeat:no-repeat;
 }
+
+iframe.tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 270px;
+    height: 470px;
+}
